feat: showquestion
